--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p",
-    "start": "yarn build && node index",
     "start:server": "nodemon",
     "start:client": "webpack-dev-server",
     "seed": "node db/seeds",
@@ -40,8 +38,23 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "bulma": "^0.7.1",
     "express": "^4.16.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "google-maps-stub": "^1.0.1",
+    "jsonwebtoken": "^8.2.1",
+    "leaflet": "^1.3.4",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.1.1",
+    "mongoose-unique-validator": "^2.0.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.7",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-leaflet": "^2.1.2",
+    "react-router-dom": "^4.3.1"
   }
 }
